RESOLVED FIXED221931
Web Animations JS API does not support "inherit" CSS values for keyframes
https://bugs.webkit.org/show_bug.cgi?id=221931
Summary Web Animations JS API does not support "inherit" CSS values for keyframes
Antoine Quint
Reported 2021-02-15 15:04:07 PST
Web Animations JS API does not support "inherit" CSS values for keyframes
Attachments
Patch for EWS (233.67 KB, patch)
2021-02-15 15:05 PST, Antoine Quint
no flags
Patch (224.65 KB, patch)
2021-02-16 03:45 PST, Antoine Quint
koivisto: review+
ews-feeder: commit-queue-
Antoine Quint
Comment 1 2021-02-15 15:05:00 PST
Created attachment 420384 [details] Patch for EWS
Antoine Quint
Comment 2 2021-02-15 15:06:25 PST
Supporting this should allow for at least 350 WPT tests to progress.
Antoine Quint
Comment 3 2021-02-15 15:08:32 PST
This will be fixed by ensuring we pass the parent style down to Style::Resolver::styleForKeyframe() throughout the animation resolution code. As such this is blocked by bug 221926.
Antoine Quint
Comment 4 2021-02-16 03:45:26 PST
Antti Koivisto
Comment 5 2021-02-16 03:55:26 PST
Comment on attachment 420445 [details] Patch nice!
EWS
Comment 6 2021-02-16 05:36:55 PST
commit-queue failed to commit attachment 420445 [details] to WebKit repository. To retry, please set cq+ flag again.
Antoine Quint
Comment 7 2021-02-16 07:20:54 PST
Radar WebKit Bug Importer
Comment 8 2021-02-16 07:21:13 PST
Note You need to log in before you can comment on or make changes to this bug.