Web Animations JS API does not support "inherit" CSS values for keyframes https://bugs.webkit.org/show_bug.cgi?id=221931

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Mark WPT progressions.

* web-platform-tests/css/css-align/animation/column-gap-interpolation-expected.txt:
* web-platform-tests/css/css-align/animation/row-gap-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-color-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-image-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-position-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-position-origin-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-position-x-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-position-y-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-size-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-color-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-image-outset-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-image-slice-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-image-source-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-image-width-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-radius-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-width-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/box-shadow-interpolation-expected.txt:
* web-platform-tests/css/css-box/animation/margin-interpolation-expected.txt:
* web-platform-tests/css/css-box/animation/padding-interpolation-expected.txt:
* web-platform-tests/css/css-color/animation/color-interpolation-expected.txt:
* web-platform-tests/css/css-color/animation/opacity-interpolation-expected.txt:
* web-platform-tests/css/css-flexbox/animation/flex-basis-interpolation-expected.txt:
* web-platform-tests/css/css-flexbox/animation/flex-grow-interpolation-expected.txt:
* web-platform-tests/css/css-flexbox/animation/flex-shrink-interpolation-expected.txt:
* web-platform-tests/css/css-flexbox/animation/order-interpolation-expected.txt:
* web-platform-tests/css/css-fonts/animations/font-size-interpolation-001-expected.txt:
* web-platform-tests/css/css-fonts/animations/font-size-interpolation-002-expected.txt:
* web-platform-tests/css/css-fonts/animations/font-stretch-interpolation-expected.txt:
* web-platform-tests/css/css-lists/animations/list-style-image-interpolation-expected.txt:
* web-platform-tests/css/css-multicol/animation/column-count-interpolation-expected.txt:
* web-platform-tests/css/css-multicol/animation/column-rule-color-interpolation-expected.txt:
* web-platform-tests/css/css-multicol/animation/column-width-interpolation-expected.txt:
* web-platform-tests/css/css-position/animations/bottom-interpolation-expected.txt:
* web-platform-tests/css/css-position/animations/left-interpolation-expected.txt:
* web-platform-tests/css/css-position/animations/right-interpolation-expected.txt:
* web-platform-tests/css/css-position/animations/top-interpolation-expected.txt:
* web-platform-tests/css/css-shapes/animation/shape-image-threshold-interpolation-expected.txt:
* web-platform-tests/css/css-shapes/animation/shape-margin-interpolation-expected.txt:
* web-platform-tests/css/css-shapes/animation/shape-outside-interpolation-expected.txt:
* web-platform-tests/css/css-sizing/animation/height-interpolation-expected.txt:
* web-platform-tests/css/css-sizing/animation/max-height-interpolation-expected.txt:
* web-platform-tests/css/css-sizing/animation/max-width-interpolation-expected.txt:
* web-platform-tests/css/css-sizing/animation/min-height-interpolation-expected.txt:
* web-platform-tests/css/css-sizing/animation/min-width-interpolation-expected.txt:
* web-platform-tests/css/css-sizing/animation/width-interpolation-expected.txt:
* web-platform-tests/css/css-text/animations/letter-spacing-interpolation-expected.txt:
* web-platform-tests/css/css-text/animations/text-indent-interpolation-expected.txt:
* web-platform-tests/css/css-text/animations/word-spacing-interpolation-expected.txt:
* web-platform-tests/css/css-transforms/animation/perspective-interpolation-expected.txt:
* web-platform-tests/css/css-transforms/animation/rotate-interpolation-expected.txt:
* web-platform-tests/css/css-transforms/animation/scale-interpolation-expected.txt:
* web-platform-tests/css/css-transforms/animation/transform-interpolation-006-expected.txt:
* web-platform-tests/css/css-transforms/animation/transform-origin-interpolation-expected.txt:
* web-platform-tests/css/css-transforms/animation/translate-interpolation-expected.txt:
* web-platform-tests/css/css-transitions/animations/text-shadow-interpolation-expected.txt:
* web-platform-tests/css/css-transitions/animations/z-index-interpolation-expected.txt:
* web-platform-tests/css/css-ui/animation/caret-color-interpolation-expected.txt:
* web-platform-tests/css/css-ui/animation/outline-color-interpolation-expected.txt:
* web-platform-tests/css/css-ui/animation/outline-offset-interpolation-expected.txt:
* web-platform-tests/css/css-ui/animation/outline-width-interpolation-expected.txt:

Source/WebCore:

When a KeyframeEffect compute its blending keyframes with KeyframeEffect::updateBlendingKeyframes(),
it calls into Style::Resolver::styleForKeyframe(). However, we wouldn't have a parent element style
to pass into this method and thus the "inherit" value wouldn't have a parent element style to know
what it should be, which meant we just used the value set on the element as fallback.

In a similar fashion as to what was done in r272898, the fix for bug 221926, we send down the parent
element style throughout the Web Animations resolution code such that KeyframeEffect::apply() can
pass it to KeyframeEffect::updateBlendingKeyframes() and finally to Style::Resolver::styleForKeyframe().

This simple fix adds 354 new PASS results in the WPT test suite.

* animation/AnimationEffect.h:
* animation/AnimationTimeline.cpp:
(WebCore::AnimationTimeline::updateCSSTransitionsForStyleableAndProperty):
* animation/CSSTransition.cpp:
(WebCore::CSSTransition::resolve):
* animation/CSSTransition.h:
* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::updateBlendingKeyframes):
(WebCore::KeyframeEffect::apply):
(WebCore::KeyframeEffect::setAnimatedPropertiesInStyle):
* animation/KeyframeEffect.h:
* animation/KeyframeEffectStack.cpp:
(WebCore::KeyframeEffectStack::applyKeyframeEffects):
* animation/KeyframeEffectStack.h:
* animation/WebAnimation.cpp:
(WebCore::WebAnimation::resolve):
(WebCore::WebAnimation::commitStyles):
* animation/WebAnimation.h:
* style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::createAnimatedElementUpdate):
* style/Styleable.h:
(WebCore::Styleable::applyKeyframeEffects const):

LayoutTests:

Mark WPT progressions for a couple tests with platform-specific results.

* platform/ios/imported/w3c/web-platform-tests/css/css-backgrounds/animations/border-width-interpolation-expected.txt:
* platform/mac-wk1/imported/w3c/web-platform-tests/css/css-color/animation/opacity-interpolation-expected.txt:

Canonical link: https://commits.webkit.org/234137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272904 268f45cc-cd09-0410-ab3c-d52691b4dbfc