Source/WebCore/animation/AnimationTimeline.cpp
@@ -377,7 +377,7 @@ void AnimationTimeline::updateCSSTransitionsForStyleableAndProperty(const Stylea
             // If a transition has not yet started or started when animations were last updated, use the timeline time at its creation
             // as its start time to ensure that it will produce a style with progress > 0.
             bool shouldUseTimelineTimeAtCreation = is<CSSTransition>(animation) && (!animation->startTime() || *animation->startTime() == currentTime());
-            animation->resolve(animatedStyle, shouldUseTimelineTimeAtCreation ? downcast<CSSTransition>(*animation).timelineTimeAtCreation() : WTF::nullopt);
+            animation->resolve(animatedStyle, nullptr, shouldUseTimelineTimeAtCreation ? downcast<CSSTransition>(*animation).timelineTimeAtCreation() : WTF::nullopt);
             return animatedStyle;
         }
 
@@ -397,7 +397,7 @@ void AnimationTimeline::updateCSSTransitionsForStyleableAndProperty(const Stylea
     auto afterChangeStyle = [&]() -> const RenderStyle {
         if (is<CSSAnimation>(animation) && animation->isRelevant()) {
             auto animatedStyle = RenderStyle::clone(newStyle);
-            animation->resolve(animatedStyle);
+            animation->resolve(animatedStyle, nullptr);
             return animatedStyle;
         }
 
